# strawberry-django

./: .alexrc.yaml  .coveragerc  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE.md  demo.py  index.html  mkdocs.yml  pyproject.toml
.github/: actionlint-matcher.json
.github/workflows/: actionlint.yml  gh-pages.yml  main.yml  pr.yml  release-check.yml  release.yml  tests.yml
community-projects/: index.html
contributing/: index.html
docs/: Contributing.md  README.md  community-projects.md  contributing.md  faq.md  index.md  quick-start.md
docs/guide/: authentication.md  best-practices.md  dataloaders.md  error-handling.md  export-schema.md  fields.md  filters.md  legacy-ordering.md  model-properties.md  mutations.md  nested-mutations.md  optimizer.md  ordering.md  pagination.md  performance.md  permissions.md  queries.md  relay.md  resolvers.md  settings.md  subscriptions.md  troubleshooting.md  types.md  unit-testing.md  validation.md  views.md
docs/guides/: debug-toolbar.md  quick-start.md  relationships.md
docs/integrations/: channels.md  choices-field.md  debug-toolbar.md  federation.md  geodjango.md  guardian.md
docs/references/: authentication.md  django_model_types.md  fields.md  filters.md  mutations.md  ordering.md  pagination.md  queries.md  resolvers.md  settings.md  subscriptions.md  types.md  views.md
examples/: README.md
examples/django/: README.md  manage.py  pyproject.toml
examples/django/app/: apps.py  models.py  schema.py  settings.py  types.py  urls.py
examples/django/app/base/: types.py
examples/django/app/fixtures/: berries.json
examples/django/app/management/commands/: populate_db.py
examples/django/app/migrations/: 0001_initial.py  0002_alter_fruit_color.py
examples/django/app/order/: models.py  schema.py
examples/django/app/product/: apps.py  models.py  types.py
examples/django/app/user/: models.py  schema.py  types.py
examples/ecommerce_app/: README.md  manage.py  pyproject.toml  pytest.ini
examples/ecommerce_app/app/: schema.py  settings.py  urls.py  views.py  wsgi.py
examples/ecommerce_app/app/base/: dataloaders.py  types.py
examples/ecommerce_app/app/management/commands/: populate_db.py
examples/ecommerce_app/app/order/: apps.py  models.py  schema.py  types.py
examples/ecommerce_app/app/product/: models.py  schema.py  types.py
examples/ecommerce_app/app/user/: apps.py  models.py  schema.py  types.py
examples/ecommerce_app/tests/: README.md  __init__.py  conftest.py  test_user_queries.py
faq/: index.html
guide/authentication/: index.html
guide/export-schema/: index.html
guide/fields/: index.html
guide/filters/: index.html
guide/mutations/: index.html
guide/optimizer/: index.html
guide/ordering/: index.html
guide/pagination/: index.html
guide/permissions/: index.html
guide/queries/: index.html
guide/relay/: index.html
guide/resolvers/: index.html
guide/settings/: index.html
guide/subscriptions/: index.html
guide/types/: index.html
guide/unit-testing/: index.html
guide/views/: index.html
integrations/channels/: index.html
integrations/choices-field/: index.html
integrations/debug-toolbar/: index.html
integrations/guardian/: index.html
quick-start/: index.html
search/: search_index.json
strawberry_django/: __init__.py  apps.py  arguments.py  descriptors.py  exceptions.py  fields.py  filters.py  hooks.py  mutations.py  optimizer.py  ordering.py  pagination.py  permissions.py  postfetch.py  queryset.py  receivers.py  registers.py  relay.py  relay_cursor.py  resolvers.py  routers.py  settings.py  tests.py  type.py  types.py  utils.py
strawberry_django/auth/: __init__.py  exceptions.py  mutations.py  queries.py  utils.py
strawberry_django/extensions/: __init__.py  django_cache_base.py  django_parse_cache.py  django_parser_cache.py  django_validation_cache.py
strawberry_django/federation/: __init__.py  field.py  resolve.py  type.py
strawberry_django/fields/: base.py  field.py  filter_order.py  filter_types.py  resolvers.py  types.py
strawberry_django/integrations/: guardian.py
strawberry_django/legacy/: fields.py  filters.py  hooks.py  registers.py  type.py  types.py  utils.py
strawberry_django/middlewares/: debug_toolbar.py
strawberry_django/mutations/: __init__.py  dataclasses.py  fields.py  mutations.py  resolvers.py  types.py
strawberry_django/queries/: resolvers.py
strawberry_django/relay/: __init__.py  cursor_connection.py  list_connection.py  utils.py
strawberry_django/relay_impl/: cursor_connection.py  list_connection.py
strawberry_django/subscriptions/: publishers.py  receivers.py  subscribers.py  utils.py
strawberry_django/test/: client.py
strawberry_django/utils/: __init__.py  gql_compat.py  inspect.py  patches.py  pyutils.py  query.py  requests.py  typing.py
tests/: conftest.py  django_settings.py  exceptions.py  models.py  schema.py  test_apps.py  test_client.py  test_commands.py  test_custom_connection.py  test_custom_is_type_of.py  test_descriptors.py  test_deterministic_ordering.py  test_enums.py  test_field_extensions.py  test_field_name_traversal.py  test_field_permissions.py  test_input_mutations.py  test_legacy_order.py  test_mutation.py  test_optimizer.py  test_ordering.py  test_paginated_type.py  test_pagination.py  test_permissions.py  test_pyutils.py  test_queries.py  test_query.py  test_queryset_config.py  test_register.py  test_relay.py  test_resolver.py  test_settings.py  test_type.py  test_types.py  test_utils.py  types.py  urls.py  utils.py
tests/app/: models.py
tests/auth/: conftest.py  test_mutations.py  test_queries.py  test_types.py
tests/extensions/: test_parse_cache.py  test_validation_cache.py
tests/federation/: __init__.py  test_resolve_reference.py  test_schema.py  test_type.py
tests/fields/: test_attributes.py  test_get_result.py  test_input.py  test_ref.py  test_relations.py  test_types.py
tests/filters/: test_filter_fields.py  test_filter_import.py  test_filter_query.py  test_filters.py  test_filters_v2.py  (+2 more)
(+102 files in other folders)
